# gait-mos-kinematics

./: .gitignore  README.md  pyproject.toml
examples/: README.md  generate_demo_ensemble_plots.py
src/gait_mos_kinematics/: __init__.py  batch_kinematics_ensemble.py  batch_kinematics_peaks.py  batch_mos.py  batch_mos_timeseries.py  cli_outliers.py  gait_kinematics.py  gait_mos.py  outlier_rejection.py  plot_ensemble_kinematics.py
tests/: test_outliers.py
